vlib/v/parser/tests/prefix_inc_err.vv
mut mp := map[string]int{}
mp["a"] = 1
--mp["a"]
